diagnostics/tests/snapshots/overlapping_labels.snap
error[TEST0102]: main
 --> order.js:1:3
  |
1 | abcdefghij
  |   ^^^^ ---
  |   | main
  |        | tail
  |    -- overlap
